src/test/ui/rfc-2008-non-exhaustive/unstable-reachable.stderr
error: some variants are not matched explicitly
  --> $DIR/unstable-reachable.rs:13:9
   |
LL |         _ => {}
   |         ^ patterns `Stable2` and `Unstable` not covered
   |
note: the lint level is defined here
  --> $DIR/unstable-reachable.rs:10:12
   |
LL |     #[deny(non_exhaustive_omitted_patterns)]
   |            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   = help: ensure that all variants are matched explicitly by adding the suggested match arms
   = note: the matched value is of type `Foo` and the `non_exhaustive_omitted_patterns` attribute was found

error: aborting due to previous error

